--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,22 +25,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      - uses: pnpm/action-setup@v3 # pnpm is optional but recommended, you can also use npm / yarn
+      - uses: npm/action-setup@v3 
         with:
           version: 8
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
+          cache: npm
       - name: Setup Pages
         uses: actions/configure-pages@v5
         if: github.repository_owner == 'syf20020816'
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Build with Rspress
         run: |
-          pnpm run build
+          npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
