--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
-name: GenUI Book CI/CD
+name: GenUI CI/CD
 
 on:
   push:
-    branches: [main]
-  pull_request:
     branches: [main]
 
   workflow_dispatch:
@@ -16,6 +14,7 @@ permissions:
 concurrency:
   group: pages
   cancel-in-progress: false
+
 jobs:
   # Build job
   build:
@@ -25,22 +24,21 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      - uses: npm/action-setup@v3 
+      - uses: pnpm/action-setup@v3 # pnpm is optional but recommended, you can also use npm / yarn
         with:
           version: 8
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v5
-        if: github.repository_owner == 'privoce'
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
       - name: Build with Rspress
         run: |
-          npm run build
+          pnpm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -48,7 +46,6 @@ jobs:
 
   # Deployment job
   deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
